fix: background image from plans very large on mobile

--- a/src/pages/home/sections/ChoosePlan/plans.module.sass
+++ b/src/pages/home/sections/ChoosePlan/plans.module.sass
@@ -22,7 +22,7 @@
   .cardsBackground
     position: relative
     object-fit: fill
-    width: 100vw
+    width: 100%
     height: 600px
   #contentRow
     position: absolute
@@ -30,7 +30,7 @@
     flex-flow: row wrap
     justify-content: space-around 
     gap: 50px
-    width: 90%
+    width: 85%
     padding: 20px 30px
     .cardItem
       display: flex
